--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/container"
-        android:name="com.example.heroes.MainFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
